# facet-serde

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: comparison.rs
src/: de.rs  lib.rs  module.rs  ser.rs
tests/: attr.rs  discrepancies.rs  locks.rs  ron.rs  roundtrip.rs
