[package]
name = "facet-serde"
version = "0.0.5"
edition = "2024"
authors = ["Erik Tesar <erik@erik-tesar.com>"]
license = "MIT OR Apache-2.0"
description = "Adapter to (de)serialize facet types with serde"
readme = "README.md"
repository = "https://github.com/Erik1000/facet-serde"
categories = ["encoding", "no-std"]
keywords = ["serde", "facet", "serialization"]

[dependencies]
derive_more = { version = "2.1.1", features = [
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "from",
] }
facet = { version = "0.46", default-features = false, features = ["alloc"] }
facet-maybe-mut = "0.0.2"
facet-reflect = { version = "0.46", default-features = false, features = [
    "alloc",
] }
serde = { version = "1", default-features = false, features = ["alloc"] }


[dev-dependencies]
facet = { version = "0.46", features = ["std"] }
facet-json = "0.46"
ron = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
